Fixed affix widget & various compatibility issues
Affix widget fix (TOC not showing up), Added close button to bootstrap
popover, increased compatibility with syntax highlighter plugin, easy
bootstrap shortcode plugin etc...

--- a/style.css
+++ b/style.css
@@ -675,6 +675,10 @@ body .comment-reply-title {
 	background-color: #910101;
 	border-color: #910101;
 }
+.ipt-kb-social-widget .ipt-kb-social-ul li.envato a:hover {
+	background-color: #82B540;
+	border-color: #82B540;
+}
 
 /* =Footer
 ---------------------------------------------- */
@@ -847,5 +851,22 @@ body blockquote p,
 }
 body code {
 	white-space: normal;
+}
+
+/* =Syntax Highlighter Compatibility
+------------------------------------------------- */
+.syntaxhighlighter .container:before,
+.syntaxhighlighter .container:after {
+	display: none;
+}
+.syntaxhighlighter *,
+.syntaxhighlighter *:after,
+.syntaxhighlighter *:before {
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+}
+.syntaxhighlighter code {
+	white-space: nowrap;
 }
 
